--- a/examples/simple/Cargo.toml
+++ b/examples/simple/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "arrow2_convert_example_simple"
-version = "0.1.0"
+name = "arrow_convert_example_simple"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-arrow2 = "0.17"
-arrow2_convert = { version = "0.5", path = "../../arrow2_convert" }
+arrow = "51.0"
+arrow_convert = { version = "0.6", path = "../../arrow_convert" }
