--- a/arrow_convert_derive/Cargo.toml
+++ b/arrow_convert_derive/Cargo.toml
@@ -1,15 +1,11 @@
 [package]
 name = "arrow_convert_derive"
-version = "0.6.0"
-authors = [
-    "Swoorup Joshi <swoorupj@gmail.com>",
-    "Jorge Leitao <jorgecarleitao@gmail.com>",
-    "Chandra Penke <chandrapenke@gmail.com>"
-]
-edition = "2021"
-license = "Apache-2.0 OR MIT"
-keywords = ["Arrow", "arrow"]
-repository = "https://github.com/Swoorup/arrow-convert"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+keywords.workspace = true
+repository.workspace = true
 description = "Proc macros for arrow_convert"
 
 [lib]
