--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
 ]
 
 [workspace.package]
-version = "0.6.1"
+version = "0.6.2"
 authors = [
   "Swoorup Joshi <swoorupj@gmail.com>",
   "Jorge Leitao <jorgecarleitao@gmail.com>",
@@ -17,3 +17,19 @@ edition = "2021"
 license = "Apache-2.0 OR MIT"
 keywords = ["Arrow", "arrow"]
 repository = "https://github.com/Swoorup/arrow-convert"
+
+[workspace.dependencies]
+# workspace crates
+arrow_convert = { path = "arrow_convert", version = "0.6.2" }
+arrow_convert_derive = { path = "arrow_convert_derive", version = "0.6.2" }
+
+arrow = "51.0"
+chrono = { version = "0.4", default-features = false }
+criterion = "0.5"
+err-derive = "0.3"
+half = { version = "2.1", default-features = false }
+proc-macro-error = "1"
+proc-macro2 = "1"
+quote = "1"
+syn = "1"
+trybuild = "1.0"
