--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
 ]
 
 [workspace.package]
-version = "0.6.3"
+version = "0.6.4"
 authors = [
   "Swoorup Joshi <swoorupj@gmail.com>",
   "Jorge Leitao <jorgecarleitao@gmail.com>",
@@ -20,8 +20,8 @@ repository = "https://github.com/Swoorup/arrow-convert"
 
 [workspace.dependencies]
 # workspace crates
-arrow_convert = { path = "arrow_convert", version = "0.6.3" }
-arrow_convert_derive = { path = "arrow_convert_derive", version = "0.6.3" }
+arrow_convert = { path = "arrow_convert", version = "0.6.4" }
+arrow_convert_derive = { path = "arrow_convert_derive", version = "0.6.4" }
 
 arrow = "51.0"
 chrono = { version = "0.4", default-features = false }
@@ -33,3 +33,4 @@ proc-macro2 = "1"
 quote = "1"
 syn = "1"
 trybuild = "1.0"
+pretty_assertions = "1.4"
