--- a/arrow_convert/Cargo.toml
+++ b/arrow_convert/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "arrow_convert"
-version.workspace = true
+version= "0.6.7"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
