--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,4 +6,4 @@ updates:
       interval: "weekly"
     open-pull-requests-limit: 10
     target-branch: main
-    labels: [auto-dependencies
+    labels: [auto-dependencies]
