--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ repository = "https://github.com/Swoorup/arrow-convert"
 arrow_convert = { path = "arrow_convert", version = "0.7.3" }
 arrow_convert_derive = { path = "arrow_convert_derive", version = "0.7.3" }
 
-arrow = "53.3"
+arrow = {version = "53.3", default-features = false }
 chrono = { version = "0.4", default-features = false }
 criterion = "0.5"
 err-derive = "0.3"
