Add support for Uuid for ArrowDeserialize and ArrowSerialize
Reference: https://arrow.apache.org/docs/format/CanonicalExtensions.html#uuid

Rely on FixedSizeBinary(16) as the arrow format as mentionned in the spec

--- a/arrow_convert/Cargo.toml
+++ b/arrow_convert/Cargo.toml
@@ -30,6 +30,7 @@ half = { workspace = true }
 glam = { workspace = true, optional = true }
 rust_decimal = { workspace = true, optional = true }
 tinystr = { workspace = true, optional = true }
+uuid = { workspace = true }
 
 [dev-dependencies]
 arrow = { workspace = true }
